@@ -46,7 +46,25 @@ write_filters(std::ostream& os) const {
 
 std::ostream&
 operator<<(std::ostream& os,
+           const shared_modifiers& shmod) {
+
+    os << "gqx: " << shmod.gqx
+       << " gq: " << shmod.gq
+       << " max_gt: " << DIGT::label(shmod.max_gt);
+
+    os << " filters: ";
+    shmod.write_filters(os);
+
+    return os;
+}
+
+
+
+std::ostream&
+operator<<(std::ostream& os,
            const site_modifiers& smod) {
+
+    os << static_cast<shared_modifiers>(smod) << '\n';
 
     os << "is_unknown: " << smod.is_unknown;
     os << " is_covered: " << smod.is_covered;
@@ -54,9 +72,10 @@ operator<<(std::ostream& os,
     os << " is_zero_ploidy: " << smod.is_zero_ploidy;
     os << " is_block: " << smod.is_block;
 
-    if(smod.modified_gt !=MODIFIED_SITE_GT::NONE) {
+    if(smod.modified_gt != MODIFIED_SITE_GT::NONE) {
         os << " modgt: " << MODIFIED_SITE_GT::get_label(smod.modified_gt);
     }
+
     return os;
 }
 
